--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
   test:
     env: #local to job env 
       MONGODB_CLUSTER_ADDRESS: gh-secrets1.ztagxhg.mongodb.net
-      MONGODB_USERNAME: bennytan
-      MONGODB_PASSWORD: G7ML0GoY6EEQS5l1
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
 
     environment: testing
